--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <footer id="footer">
       <a href="https://t.me/weekendtags">Telegram-канал</a>
-      <a href="https://github.com/jmas/weekendtags">Вноси изменения на GitHub</a>
+      <a href="https://github.com/jmas/weekendtags">Изменяй проект на GitHub</a>
     </footer>
   </div>
   
