--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <footer id="footer">
-      <a href="https://t.me/weekendtags">Telegram-канал</a>
+      <a href="https://t.me/weekendtags">Спрашивай в Telegram</a>
       <a href="https://github.com/jmas/weekendtags">Изменяй проект на GitHub</a>
     </footer>
   </div>
