--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div id="tags-page" style="display: none;">
-      Tags
+      <div id="tags-list"></div>
     </div>
     <div id="add-place-page" style="display: none;">
       <div id="add-place-message" class="message" style="display: none;">
