--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header id="header">
       <div>
-        <a href="#places-page"><img src="//habrastorage.org/webt/g9/nc/wh/g9ncwhzefx79w31rzfhpaz9yex4.png"></a>
+        <a href="#places-page"><img src="weekendtags.png"></a>
       </div>
       <div id="menu">
         <a href="#tags-page">Все теги</a>
