Cleanup and small updates

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </div>
       <form id="place-form">
         <div>
-          <label for="url-field">Ссылка</label>
+          <label for="url-field">Ссылка (на Google Карты или на сайт места)</label>
           <input id="url-field" type="url" name="url" required>
         </div>
         <div>
-          <label for="tags-field">Тэги</label>
+          <label for="tags-field">Тэги (чем знаменито это место, максимум 4, разделены запятой, можно свои теги)</label>
           <input id="tags-field" type="text" name="tags" required>
         </div>
         <div id="place-form-tags" class="tags"></div>
