--- a/index.html
+++ b/index.html
@@ -61,15 +61,13 @@
       <form id="search-form" onsubmit="return false;">
         <input type="search" name="search" placeholder="Искать по тегу или названию" id="search-form-input">
       </form>
-
       <div id="tags"></div>
-
       <div id="places"></div>
     </div>
 
     <footer id="footer">
-      <a href="https://t.me/weekendtags">Спрашивай в Telegram</a>
-      <a href="https://github.com/jmas/weekendtags">Изменяй проект на GitHub</a>
+      <a href="https://t.me/weekendtags">Telegram-канал</a>
+      <a href="https://github.com/jmas/weekendtags/issues">Предложить изменение на GitHub</a>
     </footer>
   </div>
 
